# data_extract

./: README.md  main.py  pyproject.toml
facebook/config/: config.py  session.py
facebook/database/: __init__.py  create_session.py
facebook/extract/: extract.py
facebook/utils/: database_models.py  facebook_class.py
